client/private/scss/modules/fancytree/_fancytree.scss
/* ... */
.fancytree-radio .fancytree-checkbox:hover {
  //background-position: -16px -48px;
  &:before { content: "\f10c"; }
}
.fancytree-radio .fancytree-partsel .fancytree-checkbox {
  //background-position: -64px -48px;
  &:before { content: "\f192"; }
}
.fancytree-radio .fancytree-partsel .fancytree-checkbox:hover {
  //background-position: -80px -48px;
  &:before { content: "\f192"; }
}
.fancytree-radio .fancytree-selected .fancytree-checkbox {
  //background-position: -32px -48px;
  &:before { content: "\f192"; }
}
.fancytree-radio .fancytree-selected .fancytree-checkbox:hover {
  //background-position: -48px -48px;
  &:before { content: "\f192"; }
}
//------------------------------------------------------------------------------
// Node type icon
// Note: IE6 doesn't correctly evaluate multiples class names,
//		  so we create combined class names that can be used in the CSS.
//
// Prefix: fancytree-ico-
// 1st character: 'e': expanded, 'c': collapsed
// 2nd character (optional): 'f': folder
//----------------------------------------------------------------------------*/
.fancytree-icon {
  margin-left: ($fancytree-grid-unit/5); //3px
  &:before { content: "\f016"; }
  //background-position: 0px 0px;
}
/* Documents */
.fancytree-ico-c .fancytree-icon:hover {
  //background-position: -16px 0px;
  &:before { content: "\f016"; }
}
.fancytree-has-children.fancytree-ico-c .fancytree-icon {
  //background-position: -32px 0px;
  &:before { content: "\f016"; }
}
.fancytree-has-children.fancytree-ico-c .fancytree-icon:hover {
  //background-position: -48px 0px;
  &:before { content: "\f016"; }
}
.fancytree-ico-e .fancytree-icon {
  //background-position: -64px 0px;
  &:before { content: "\f016"; }
}
.fancytree-ico-e .fancytree-icon:hover {
  //background-position: -80px 0px;
  &:before { content: "\f016"; }
}
.fancytree-encounter .fancytree-icon{
  &:before { content: "\f022"; }
}
.fancytree-encounter .fancytree-icon:hover {
  //background-position: -80px 0px;
  &:before { content: "\f022"; }
}
.fancytree-monster .fancytree-icon{
   &:before { content: "\f188"; }
 }
.fancytree-monster .fancytree-icon:hover {
  //background-position: -80px 0px;
  &:before { content: "\f188"; }
}
.fancytree-npc .fancytree-icon{
  &:before { content: "\f007"; }
}
.fancytree-npc .fancytree-icon:hover {
  //background-position: -80px 0px;
  &:before { content: "\f007"; }
}
.fancytree-item .fancytree-icon{
  &:before { content: "\f0c3"; }
}
.fancytree-item .fancytree-icon:hover {
  //background-position: -80px 0px;
  &:before { content: "\f0c3"; }
}
.fancytree-spell .fancytree-icon{
  &:before { content: "\f0d0"; }
}
.fancytree-spell .fancytree-icon:hover {
  //background-position: -80px 0px;
  &:before { content: "\f0d0"; }
}
.fancytree-feat .fancytree-icon{
  &:before { content: "\f005"; }
}
.fancytree-feat .fancytree-icon:hover {
  //background-position: -80px 0px;
  &:before { content: "\f005"; }
}
.fancytree-text .fancytree-icon{
  &:before { content: "\f040"; }
}
.fancytree-text .fancytree-icon:hover {
  //background-position: -80px 0px;
  &:before { content: "\f040"; }
}
.fancytree-image .fancytree-icon{
  &:before { content: "\f03e"; }
}
.fancytree-image .fancytree-icon:hover {
  //background-position: -80px 0px;
  &:before { content: "\f03e"; }
}
/* Folders */
//.fancytree-ico-cf, .fancytree-ico-ef {
//  padding-left: 0.5em;
//}

.fancytree-ico-cf .fancytree-icon {
  //background-position: 0px -16px;
  &:before { content: "\f114"; }
}
.fancytree-ico-cf .fancytree-icon:hover {
  //background-position: -16px -16px;
  &:before { content: "\f114"; }
}
.fancytree-has-children.fancytree-ico-cf .fancytree-icon {
  //background-position: -32px -16px;
  &:before { content: "\f114"; }
}
.fancytree-has-children.fancytree-ico-cf .fancytree-icon:hover {
  //background-position: -48px -16px;
  &:before { content: "\f114"; }
}
.fancytree-ico-ef .fancytree-icon {
  //background-position: -64px -16px;
  &:before { content: "\f115"; }
}
.fancytree-ico-ef .fancytree-icon:hover {
  //background-position: -80px -16px;
  &:before { content: "\f115"; }
}
/* Status node icons */
.fancytree-statusnode-wait .fancytree-icon {
  //background-image: url("../img/fancytree-loading.gif");
  &:before {
    content: "\f110";
    @include prefixer(animation, rotating 1s linear infinite, webkit moz ms o spec);
    &:hover { content: "\f110"; }
  }
}
.fancytree-statusnode-error .fancytree-icon {
  //background-position: 0px -112px;
  &:before { content: "\f12a"; color: $fancytree-icon-color1; }
}
//------------------------------------------------------------------------------
// Node titles and highlighting
//----------------------------------------------------------------------------*/
.fancytree-node {
  /* See #117 */
  //display: inherit;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  padding-left: 0.5em;
  width: 100%;
  display: table;
  > span {
    display: table-cell;
    vertical-align: middle;
  }
  // @include transition();
  border-bottom: 1px solid $fancytree-border-color;
  //@include box-shadow(0, 0, 0, $brown-transparent, $inset: true);
  &:hover {
    background-color: $fancytree-hover-bg-color;
    color: $fancytree-hover-font-color;
    //@include box-shadow(0, 0, 5px, $brown-transparent, $inset: true);
  }
}
.fancytree-title {
  display: inline-block;
  color: inherit;
  //color: $fancytree-font-color1;
  //vertical-align: top;
  padding-left: ($fancytree-grid-unit/5); //3px
  padding-right: ($fancytree-grid-unit/5); //3px
  margin: -0.25em 0px -0.25em ($fancytree-grid-unit/5); //3px
  //margin-left: ($fancytree-grid-unit/5); //3px
  cursor: pointer;
  max-width: 200px;
  overflow: hidden;
  text-overflow: ellipsis;
}
/* ... */

